--- a/VizSharp.App/MainWindow.xaml
+++ b/VizSharp.App/MainWindow.xaml
@@ -1,8 +1,24 @@
 ﻿<Window x:Class="VizSharp.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:app="clr-namespace:VizSharp.App"
+        Title="MainWindow"
+        WindowStartupLocation="CenterScreen"
+        Height="350"
+        Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <app:BarGraph x:Name="barGraph"
+                      Grid.Row="0"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"/>
+        <StackPanel Grid.Row="1"
+                    Orientation="Horizontal">
+            <Button Content="Button0" Width="75"/>
+            <Button Content="Button1" Width="75"/>
+        </StackPanel>
     </Grid>
 </Window>
