--- a/VizSharp.App/MainWindow.xaml
+++ b/VizSharp.App/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:app="clr-namespace:VizSharp.App"
-        Title="MainWindow"
+        Title="VizSharp"
         WindowStartupLocation="CenterScreen"
         Height="350"
         Width="525">
@@ -15,10 +15,20 @@
                       Grid.Row="0"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Stretch"/>
-        <StackPanel Grid.Row="1"
-                    Orientation="Horizontal">
-            <Button Content="Button0" Width="75" Click="Button_Click"/>
-            <Button Content="Button1" Width="75"/>
-        </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="goButton"
+                    Grid.Column="0"
+                    Content="Go"
+                    Width="75"
+                    Click="goButton_Click"/>
+            <ComboBox x:Name="algorithmsComboBox"
+                      Grid.Column="1"
+                      HorizontalAlignment="Stretch"
+                      DisplayMemberPath="Name"/>
+        </Grid>
     </Grid>
 </Window>
